update swagger for getting movie by id
