# src/common/swagger/schema/movie.yml
@@ -20,6 +20,11 @@ components:
         - runTime
         - languages
       properties:
+        _id:
+          type: string
+          example: 630f06f6f80f0c456d5d3e11
+          readOnly: true
+          description: Unique movie identifier
         title:
           type: string
           uniqueItems: true
@@ -123,3 +128,15 @@ components:
                       limit:
                         type: number
                         example: 10
+    GetMovieSuccessResponse:
+      description: Success response for getting a single movie
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              success:
+                type: boolean
+                example: true
+              data:
+                $ref: '#/components/schemas/Movie'
